Create friend wall activity Set action for clicking avatar image and username text view in post Set menu for current user's post (edit/ post) Create some string in Strings.xml

--- a/app/src/main/res/layout/header_privacy_wall.xml
+++ b/app/src/main/res/layout/header_privacy_wall.xml
@@ -87,7 +87,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="0dp"
                             android:layout_weight="1"
-                            android:text="bài đăng"
+                            android:text="@string/post"
                             android:textColor="@color/colorDark"
                             android:textAlignment="center"/>
                     </LinearLayout>
@@ -110,7 +110,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="0dp"
                             android:layout_weight="1"
-                            android:text="follower"
+                            android:text="@string/follower_eng"
                             android:textColor="@color/colorDark"
                             android:textAlignment="center"/>
                     </LinearLayout>
@@ -133,7 +133,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="0dp"
                             android:layout_weight="1"
-                            android:text="follow"
+                            android:text="@string/following_eng"
                             android:textColor="@color/colorDark"
                             android:textAlignment="center"/>
                     </LinearLayout>
@@ -150,7 +150,7 @@
                         android:layout_margin="1dp"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:text="Chỉnh sửa trang cá nhân"
+                        android:text="@string/edit_privacy_wall"
                         android:textSize="8dp"
                         android:background="@color/colorWhite"
                         />
