--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,32 +56,40 @@
         android:id="@+id/navigationBar"
         android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="45dp"
         android:orientation="horizontal"
         android:elevation="3dp"
         android:paddingTop="@dimen/extra_small_margin"
         android:paddingBottom="@dimen/extra_small_margin"
         android:background="@color/colorWhite">
+
         <ImageView
+            android:id="@+id/homeImageIcon"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:src="@drawable/ic_home_clicked"/>
+            android:src="@drawable/ic_home_clicked" />
+
         <ImageView
+            android:id="@+id/searchImageIcon"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:src="@drawable/ic_search"/>
+            android:src="@drawable/ic_search" />
+
         <ImageView
+            android:id="@+id/uploadImageIcon"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:src="@drawable/ic_post_track"/>
+            android:src="@drawable/ic_post_track" />
+
         <ImageView
+            android:id="@+id/notificationImageIcon"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:src="@drawable/ic_notification"/>
+            android:src="@drawable/ic_notification" />
 
         <ImageView
             android:id="@+id/privacyWallImageIcon"
