--- a/app/src/main/res/layout/item_post_listview.xml
+++ b/app/src/main/res/layout/item_post_listview.xml
@@ -31,25 +31,20 @@
         </LinearLayout>
         <LinearLayout
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="10"
             android:orientation="vertical"
-            android:gravity="center_vertical"
-           >
+            android:layout_gravity="center_vertical">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="8">
-
                     <TextView
                         android:id="@+id/titleTextView"
-                        android:layout_width="match_parent"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
+                        android:layout_weight="8"
                         android:ellipsize="end"
                         android:gravity="bottom"
                         android:maxLines="2"
@@ -58,51 +53,37 @@
                         android:text="THisss"
                         android:textColor="@color/colorDark"
                         android:textSize="@dimen/medium_text" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1">
 
                     <ImageView
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
                         android:id="@+id/menuImage"
-                        android:layout_width="match_parent"
-                        android:layout_height="30dp"
+                        android:layout_height="match_parent"
                         android:src="@drawable/ic_menu" />
-                </LinearLayout>
 
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="20dp"
                 android:orientation="horizontal">
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="6">
 
                     <TextView
                         android:id="@+id/usernameTextView"
-                        android:layout_width="match_parent"
+                        android:layout_width="0dp"
                         android:layout_height="match_parent"
+                        android:layout_weight="6"
                         android:ellipsize="end"
                         android:maxLines="1"
                         android:paddingLeft="@dimen/small_margin"
                         android:paddingRight="@dimen/extra_small_margin"
                         android:text="Hồ Thị Kim Hoàng"
                         android:textStyle="bold" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="3">
 
                     <TextView
                         android:id="@+id/timeTextView"
-                        android:layout_width="match_parent"
+                        android:layout_width="0dp"
                         android:layout_height="match_parent"
+                        android:layout_weight="3"
                         android:gravity="center"
                         android:ellipsize="end"
                         android:maxLines="1"
@@ -111,7 +92,6 @@
                         android:paddingRight="@dimen/extra_small_margin"
                         android:text="2 phút trước"
                         android:textSize="@dimen/small_text" />
-                </LinearLayout>
 
                 <ImageView
                     android:layout_width="20dp"
