--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,44 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     tools:context="com.example.htk.designtemplate.Activity.MainActivity">
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/my_toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:background="@color/colorWhite"
-        android:elevation="3dp"
-        android:paddingRight="@dimen/small_margin">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_micro"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="1"/>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="10"
-                android:fontFamily="cursive"
-                android:text="Sounderful"
-                android:textAlignment="center"
-                android:textColor="@color/colorDark"
-                android:textStyle="bold"
-                android:textSize="20dp"/>
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:src="@drawable/ic_chat"
-                android:layout_weight="1"/>
-        </LinearLayout>
-
-    </android.support.v7.widget.Toolbar>
+    <include layout="@layout/custom_actionbar" />
 
     <ListView
         android:id="@+id/listView"
@@ -52,52 +16,7 @@
         android:layout_above="@+id/navigationBar"
         android:layout_alignParentEnd="true"
         android:scrollbars="none" />
-    <LinearLayout
-        android:id="@+id/navigationBar"
-        android:layout_alignParentBottom="true"
-        android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:orientation="horizontal"
-        android:elevation="3dp"
-        android:paddingTop="@dimen/extra_small_margin"
-        android:paddingBottom="@dimen/extra_small_margin"
-        android:background="@color/colorWhite">
 
-        <ImageView
-            android:id="@+id/homeImageIcon"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:src="@drawable/ic_home_clicked" />
-
-        <ImageView
-            android:id="@+id/searchImageIcon"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:src="@drawable/ic_search" />
-
-        <ImageView
-            android:id="@+id/uploadImageIcon"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:src="@drawable/ic_post_track" />
-
-        <ImageView
-            android:id="@+id/notificationImageIcon"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:src="@drawable/ic_notification" />
-
-        <ImageView
-            android:id="@+id/privacyWallImageIcon"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:src="@drawable/ic_account" />
-
-    </LinearLayout>
+    <include layout="@layout/bottom_navigation" />
 
 </RelativeLayout>
