--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,7 +3,11 @@
     <dimen name="extra_small_margin">5dp</dimen>
     <dimen name="small_margin">10dp</dimen>
     <dimen name="medium_margin">15dp</dimen>
+    <dimen name="large_margin">20dp</dimen>
     <dimen name="small_text">10dp</dimen>
     <dimen name="medium_text">15dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="actionbar_height">45dp</dimen>
+    <dimen name="avatar_edge_wall">110dp</dimen>
+    <dimen name="background_height_wall">80dp</dimen>
 </resources>
