Change Bottom Navigation

--- a/app/src/main/res/layout/activity_privacy_wall.xml
+++ b/app/src/main/res/layout/activity_privacy_wall.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.htk.designtemplate.Activity.PrivacyWallActivity">
-
     <ListView
         android:id="@+id/ListViewPost"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:scrollbars="none"></ListView>
-</android.support.design.widget.CoordinatorLayout>
+        android:scrollbars="none"
+        android:layout_above="@+id/bottom_navigation_layout">
+    </ListView>
+    <include layout="@layout/layout_bottom_navigation"/>
+</RelativeLayout>
