--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -65,8 +65,10 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager_searchActivity"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:background="@color/colorWhite"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"  />
 
+    <include layout="@layout/layout_bottom_navigation"/>
 </LinearLayout>
