--- a/app/src/main/res/layout/header_friend_wall.xml
+++ b/app/src/main/res/layout/header_friend_wall.xml
@@ -11,14 +11,14 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="160dp">
+        android:layout_height="230dp">
 
         <ImageView
             android:id="@+id/backGroundImage_friendwall"
             android:layout_width="match_parent"
             android:layout_height="@dimen/background_height_wall"
             android:adjustViewBounds="true"
-            android:scaleType="fitStart"
+            android:scaleType="matrix"
             android:background="@color/colorLittleGray" />
         <ImageView
             android:id="@+id/backImage_friendwall"
@@ -47,7 +47,10 @@
                     android:layout_height="@dimen/avatar_edge_wall"
                     android:layout_gravity="bottom"
                     android:layout_marginLeft="20dp"
-                    android:elevation="3dp"
+                    android:adjustViewBounds="true"
+                    android:scaleType="fitXY"
+                    android:background="@drawable/white_background"
+                    android:padding="@dimen/extra_small_margin"
                     android:src="@mipmap/ic_launcher_round" />
             <LinearLayout
                 android:layout_weight="1"
