--- a/app/src/main/res/layout/activity_friend_wall.xml
+++ b/app/src/main/res/layout/activity_friend_wall.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,6 +9,7 @@
         android:id="@+id/ListViewPost_friendWall"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/bottom_navigation_layout"
         android:scrollbars="none"></ListView>
-
-</android.support.constraint.ConstraintLayout>
+    <include layout="@layout/layout_bottom_navigation"/>
+</RelativeLayout>
