--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,10 +13,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/my_toolbar"
-        android:layout_above="@+id/navigationBar"
+        android:layout_above="@+id/bottom_navigation_layout"
         android:layout_alignParentEnd="true"
         android:scrollbars="none" />
-
-    <include layout="@layout/bottom_navigation" />
+    <include layout="@layout/layout_bottom_navigation"/>
 
 </RelativeLayout>
