--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -43,10 +43,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/toolbar_notificationActivity"
-        android:layout_above="@+id/navigationBar"
+        android:layout_above="@+id/bottom_navigation_layout"
         android:layout_alignParentEnd="true"
         android:scrollbars="none" />
 
-    <include layout="@layout/bottom_navigation" />
+    <include layout="@layout/layout_bottom_navigation"/>
 
 </RelativeLayout>
