--- a/app/src/main/res/layout/custom_actionbar.xml
+++ b/app/src/main/res/layout/custom_actionbar.xml
@@ -1,11 +1,12 @@
-
-    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/my_toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/actionbar_height"
-        android:background="@color/colorWhite"
-        android:elevation="3dp"
-        android:paddingRight="@dimen/medium_margin">
+<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/my_toolbar"
+    android:layout_width="match_parent"
+    android:layout_height="@dimen/actionbar_height"
+    android:background="@color/colorWhite"
+    android:elevation="3dp"
+    app:contentInsetStart="0dp"
+    app:contentInsetLeft="0dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
