--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorGray">#B3B3B3</color>
     <color name="colorLittleGray">#e1e1e1e1</color>
+    <color name="colorLightGray">#f0f0f0</color>
     <color name="colorBlue">#1565D0</color>
 </resources>
