--- a/app/src/main/res/layout/activity_music_player.xml
+++ b/app/src/main/res/layout/activity_music_player.xml
@@ -23,15 +23,18 @@
 
             <TextView
                 android:id="@+id/titleSong"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="10"
-                android:fontFamily="cursive"
-                android:textAlignment="center"
+                android:layout_weight="8"
+                android:ellipsize="end"
+                android:gravity="bottom"
+                android:maxLines="2"
+                android:paddingTop="@dimen/extra_small_margin"
+                android:paddingLeft="@dimen/small_margin"
+                android:layout_marginBottom="@dimen/extra_small_margin"
+                android:text="THisss"
                 android:textColor="@color/colorDark"
-                android:textStyle="bold"
-                android:textSize="20dp"/>
+                android:textSize="@dimen/medium_text"/>
 
         </LinearLayout>
 
