--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -58,13 +58,15 @@
             android:id="@+id/signUpButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="ĐĂNG NHẬP"
+            android:text="ĐĂNG KÝ"
             android:background="@color/colorBlue"
             android:textColor="@color/colorWhite"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="2"></LinearLayout>
+        android:layout_weight="2"
+        android:gravity="center_horizontal|center_vertical">
+    </LinearLayout>
 
 </LinearLayout>
